--- a/Code/FlinkBWA/pom.xml
+++ b/Code/FlinkBWA/pom.xml
@@ -24,31 +24,17 @@
         <dependency>
             <groupId>org.apache.flink</groupId>
             <artifactId>flink-java</artifactId>
-            <version>1.6.1</version>
+            <version>1.7.2</version>
         </dependency>
         <dependency>
             <groupId>org.apache.flink</groupId>
             <artifactId>flink-streaming-java_2.11</artifactId>
-            <version>1.6.1</version>
+            <version>1.7.2</version>
         </dependency>
         <dependency>
             <groupId>org.apache.flink</groupId>
             <artifactId>flink-clients_2.11</artifactId>
-            <version>1.6.1</version>
-        </dependency>
-
-        <dependency>
-            <groupId>org.apache.flink</groupId>
-            <artifactId>flink-test-utils_2.10</artifactId>
-            <version>1.6.1</version>
-            <scope>test<scope>
-        </dependency>
-
-        <!-- Apache Flink dependencies -->
-        <dependency>
-            <groupId>cz.adamh.utils</groupId>
-            <artifactId>native-utils</artifactId>
-            <version>1.0-SNAPSHOT</version>
+            <version>1.7.2</version>
         </dependency>
 
         <!-- Native Utils dependencies -->
@@ -58,17 +44,15 @@
             <version>1.0-SNAPSHOT</version>
         </dependency>
 
-
         <dependency>
             <groupId>commons-logging</groupId>
             <artifactId>commons-logging</artifactId>
             <version>1.1.1</version>
         </dependency>
         <dependency>
-            <groupId>commons-logging</groupId>
-            <artifactId>commons-logging</artifactId>
-            <version>1.1.1</version>
+            <groupId>org.apache.hadoop</groupId>
+            <artifactId>hadoop-common</artifactId>
+            <version>2.2.0</version>
         </dependency>
-
     </dependencies>
 </project>
