--- a/Code/FlinkBWA/pom.xml
+++ b/Code/FlinkBWA/pom.xml
@@ -54,5 +54,15 @@
             <artifactId>hadoop-common</artifactId>
             <version>2.2.0</version>
         </dependency>
+        <dependency>
+            <groupId>org.apache.flink</groupId>
+            <artifactId>flink-java8</artifactId>
+            <version>0.10.0-hadoop1</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.flink</groupId>
+            <artifactId>flink-hadoop-compatibility_2.11</artifactId>
+            <version>0.10.2</version>
+        </dependency>
     </dependencies>
 </project>
