--- a/Code/FlinkBWA/pom.xml
+++ b/Code/FlinkBWA/pom.xml
@@ -26,12 +26,14 @@
             <version>1.7.2</version>
         </dependency>
 
-        <!-- Native Utils dependencies -->
+        <!-- Native Utils dependencies
+            Not shared in m2 repository, link to issue: https://github.com/adamheinrich/native-utils/issues/13
         <dependency>
             <groupId>cz.adamh.utils</groupId>
             <artifactId>native-utils</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
+        -->
 
         <dependency>
             <groupId>commons-logging</groupId>
@@ -66,8 +68,8 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
                 <configuration>
-                    <source>1.6</source>
-                    <target>1.6</target>
+                    <source>7</source>
+                    <target>7</target>
                 </configuration>
             </plugin>
 
