--- a/Code/FlinkBWA/src/main/native/Makefile.common
+++ b/Code/FlinkBWA/src/main/native/Makefile.common
@@ -18,7 +18,7 @@ BUILD_DIR = build
 
 # JAVA variables #######
 ifndef JAVA_HOME
-JAVA_HOME=/usr/lib/jvm/java-1.8.0-openjdk-amd64
+JAVA_HOME=/usr/lib/jvm/java
 JAVA_HOME_INCLUDES = -I$(JAVA_HOME)/include -I$(JAVA_HOME)/include/linux
 else
 JAVA_HOME_INCLUDES = -I$(JAVA_HOME)/include -I$(JAVA_HOME)/include/linux
@@ -27,7 +27,7 @@ endif
 #JAR_FILES = $(LIBS_DIR)/commons-cli-1.2.jar:$(LIBS_DIR)/spark-assembly-1.6.1-hadoop2.6.0.jar
 
 # Bwa variables ########
-BWA_DIR = ./bwa-0.7.15
+BWA_DIR = ./bwa-master
 SPARKBWA_FLAGS = -c -g -Wall -Wno-unused-function -O2 -fPIC -DHAVE_PTHREAD -DUSE_MALLOC_WRAPPERS $(JAVA_HOME_INCLUDES)
 LIBBWA_FLAGS = -shared -o
 LIBBWA_LIBS = -lrt -lz
